Added a few bar buttons

--- a/PolitiScales/Base.lproj/Main.storyboard
+++ b/PolitiScales/Base.lproj/Main.storyboard
@@ -101,7 +101,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pcb-ji-Rd6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="900.00000000000011" y="89.732142857142847"/>
+            <point key="canvasLocation" x="1064" y="90"/>
         </scene>
     </scenes>
 </document>
